Issue #2102409 by johnv: Fixed multiple workflow_fields per bundle, in workflow_access.
Issue #2216641 by johnv: Fixed notices by workflow_access when saving a node without workflow.
Issue #2216685 by Bastlynn: Fixed WSOD.
Issue #2216685 by Bastlynn: Fixed WSOD, part 2.
Issue #2216685 by johnv: Further cleanup and unification of workflow_node and workflow_field.
Issue #2116179 by johnv: Some more isolation of type_map functions.
Issue #2216685 by johnv: Further cleanup for workflow_vbo.
Issue #2168197 by johnv: Separated workflow_vbo actions into own files, for less footprint and better maintainability.
Issue #2218303 by johnv: Fixed error if you try to assign a state to a non-relevant node type (e.g. in workflow_vbo action).

Since 7.x-2.2
Fixed some problems with WorkflowConfigTransition.
Fixed breadcrumbs on workflow add page.
Issue #2218303 by zihong0: Fixed type in workflow_node_previous_state.
Issue #2226781 by johnv: Changed Admin UI to use Entity UI.
Issue #2226781 by johnv: Added message when saving states.
Issue #2226451 by johnv: Streamlined code around $state->showWidget().
Issue #2226451 by johnv: Removed showing workflow widget when creating a node, and only 1 state allowed.
Issue #2228317 by johnv: Moved hook_user_role_insert() since it was not called when Admin UI disabled.
Issue #2220065 by zihong0, johnv: Fixed workflow_access_node_access_records() is not called from node_save().
Issue #2228317 by johnv: Fixed hook_user_role_insert is not called when Admin UI disabled.
Issue #2228457 by johnv: Do NOT enable all roles for Transitions, upon enabling Workflow UI module.
Issue #2228457 by johnv: Fixed some help texts.
Issue #2228457 by johnv: Fixed menu_build should not be called in admin_ui install, and is not needed since update_7001 exists.
Issue #2226781 by johnv: Removed Workfow Add form, in favour of Workflow Edit form.
Issue #2128423 by johnv: Fixed small theming thingy in workflow_cleanup.pages.inc.